# pwstore-tauri

./: .gitignore  CLIENT-ID.txt  MEMO.txt  index.html  package-lock.json  package.json
src/: api.ts  main.ts  router.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  crypto.rs  drive.rs  lib.rs  main.rs  models.rs  oauth.rs
src/screens/: admin.ts  init.ts  search.ts
tools/: decrypt.js
